--- a/css/pdp.css
+++ b/css/pdp.css
@@ -233,6 +233,25 @@ li {
   justify-content: center;
   background-color: var(--light);
   padding: 2rem 0 0.8rem;
+  cursor: pointer;
+  border: 1px solid #F3F3F5;
+  opacity: 0.8;
+
+  
+}
+/* .cream-item:hover {
+  border: 1px solid #22222249;
+} */
+.cream-item:active {
+  transform: scale(1.02);
+}
+.cream-item--border {
+  border: 1px solid #222222;
+  opacity: 1;
+
+}
+.cream-item img {
+  pointer-events: none;
 }
 .cream-item p {
   font-family: "Gilroy-Regular";
@@ -241,6 +260,7 @@ li {
   text-align: center;
   margin-top: 1.6rem;
   margin-bottom: 1.2rem;
+  pointer-events: none;
 }
 .cream-item span {
   font-family: "Gilroy-Regular";
@@ -248,6 +268,8 @@ li {
   line-height: 1.6rem;
   text-align: center;
   color: #404042;
+  pointer-events: none;
+
 }
 
 .deliver {
@@ -320,6 +342,7 @@ li {
   letter-spacing: 0.16em;
   text-transform: uppercase;
   color: #ffffff;
+  cursor: pointer;
 }
 .form-text-mob {
   display: none;
